--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "stluisforms",
-  "homepage": "https://slopsa2007yeargroup.github.io",
+ "homepage": "https://slopsa2007yeargroup.github.io/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
